# HeterogeneousQueue

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  premake5.lua
CE/: CMakeLists.txt
CE/include/: Buffer.hpp  CE.hpp  CE_common.hpp  ComputeEngine.hpp  Device.hpp  DeviceCL.hpp  Event.hpp  EventCLImpl.cpp  Exception.hpp  ExceptionCLImpl.hpp  Executable.hpp  Function.hpp
CE/src/: Buffer.cpp  BufferCLImpl.hpp  BufferSequential.cpp  BufferSequential.hpp  CE.cpp  ComputeEngine.cpp  ComputeEngineCL.cpp  ComputeEngineCL.hpp  ComputeEngineMix.cpp  ComputeEngineMix.hpp  Device.cpp  DeviceCLImpl.cpp  DeviceCLImpl.hpp  DeviceSequential.cpp  DeviceSequential.hpp  EventCLImpl.cpp  EventCLImpl.hpp  EventSequentialImpl.cpp  EventSequentialImpl.hpp  Executable.cpp  ExecutableCLImpl.cpp  ExecutableCLImpl.hpp  ExecutableSequential.cpp  ExecutableSequential.hpp  Function.cpp  FunctionCLImpl.cpp  FunctionCLImpl.hpp  FunctionSequential.cpp  FunctionSequential.hpp
CLAL/: CLBuffer.cpp  CLBuffer.hpp  CLCommandQueue.cpp  CLCommandQueue.hpp  CLContext.cpp  CLContext.hpp  CLDevice.cpp  CLDevice.hpp  CLEvent.cpp  CLEvent.hpp  CLException.cpp  CLException.hpp  CLKernel.cpp  CLKernel.hpp  CLPlatform.cpp  CLPlatform.hpp  CLProgram.cpp  CLProgram.hpp  CLReferenceCount.hpp  CMakeLists.txt
CLAL/include/: CLBuffer.hpp  CLCommandQueue.hpp  CLContext.hpp  CLDevice.hpp  CLEvent.hpp  CLException.hpp  CLKernel.hpp  CLParameter.hpp  CLPlatform.hpp  CLProgram.hpp  CLReferenceCount.hpp
CLAL/src/: CLBuffer.cpp  CLCommandQueue.cpp  CLContext.cpp  CLDevice.cpp  CLEvent.cpp  CLKernel.cpp  CLParameter.cpp  CLProgram.cpp
ComputeUnit/: computeunit.cpp  computeunit.h
HQ/: CMakeLists.txt  ThreadPool.h
HQ/include/: HQ.hpp  Task.hpp  heterogeneous_queue.hpp
HQ/src/: ComputePlatform.cpp  ComputePlatform.hpp  ComputeUnit.cpp  ComputeUnit.hpp  EventSys.cpp  EventSys.hpp  HQ.cpp  HeterogeneousQueue.cpp  HeterogeneousQueue.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.hpp  Worker.cpp  Worker.hpp  heterogeneous_queue.cpp
Test/: CMakeLists.txt  compute_test.cpp  enqueue_test.cpp
Test/src/: main.cpp  test.cl
include/hq/: heterogeneous_queue.hpp
test/: main.cpp
